style.css
* {
    margin: 0;
    padding: 0;
    max-width: 100%;
    
}

body {
    font-family: 'Sen', sans-serif;
}

html, body {
    max-width: 100%;
    overflow-x: hidden;
}

footer {
    display: flex;
    justify-content: center;
    align-content: center;
    background: black;
    color: white;
    padding: 20px 0px;
    font-size: 1.3rem;
    text-transform: uppercase;
    font-weight: bold;
}

.spacer {
    height: 20vh;
}


.navImg {
    height: 20px;
    border: 2px solid black;
    border-radius: 10px;
    padding: 5px;
}

.link img {
    background-color: white;
}

.link {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 10px;
}

.link:hover {
    text-decoration: 4px underline solid crimson;
}

.links {
    display: flex;
    justify-content: space-around;
    padding: 20px;
}

.links a {
    text-decoration: none;
    cursor: pointer;
    color: black;
    font-weight: 800;
}

.links a:hover {
    text-decoration: 4px solid crimson underline;
}

.links p {
    color: crimson;
    font-size: 2rem;
}

.leftLinks, .rightLinks {
    display: flex;
    gap: 50px;
}

.leftLinks {
    align-items: flex-start;
}


.logo {
    cursor: pointer;
}

.greetingSection {
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 30px 20px;
    gap: 20px;
    /* background: white; */
}

.greetingText {
    /* width: 100px; */
    z-index: 1;
    margin-bottom: 80px;
}

.greetingText span {
    color: crimson;
}

h3 {
    font-size: 1rem;
    margin-left: 40px;
    font-style: italic;
}

.greetingImg {
    height: 300px;
    width: 300px;
    border-radius: 50%;
    background: black;

}


.resumeWrapper {
   display: flex;
   justify-content: center;
    
}

.resumeBtn {
    font-family: Arial, Helvetica, sans-serif;
    font-size: 24px;
    font-weight: 800;
    padding: 10px;
    text-transform: uppercase;
    border: 5px solid crimson;
    border-radius: 5px;
}

.resumeBtn:hover {
    background: crimson;
    cursor: pointer;
    transition: 0.3s ease-in;
}


.socialLinks {
    display: flex;
    justify-content: space-around;
    padding: 10px;;

}

.socials img {
    height: 3rem;
}

.para {
font-size: 70px;
color: crimson;

}

.emphasis {
    color: crimson;
}





.about-blurb {
    font-size: 2rem;
    background-color: black;
    color: white;
    height: 100vh;
    width: 100vw;
    max-width: fit-content;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding: 0px 30px;
    text-align: justify;
}

.aboutHeader {
    font-size: 3rem;
    color: crimson;
    text-decoration: 5px solid white overline;

    
}

.projectSection {
    
    font-size: 1.7rem;
    text-align: center;
}

.projectSectionHeader {
    padding: 10px;
    text-decoration: 5px solid crimson overline;
    text-transform: uppercase;
}

.card {
    background: whitesmoke;
    border: 4px solid black;
    width: 400px;
    text-align: center;
    padding: 20px;
}

/* TRYING TO WORK ON BLUR OVERLAY 
WITH UNDER CONSTRUCTION TEXT */

/* #pokedex {
    filter: blur(2px);
}

#pokedex::after {
    content: "Nope";
    display: flex;
    z-index: 2;
} */

.cards {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 30px;
    padding: 20px;


}

.previewBtn, .viewBtn {
    padding: 10px;
    border: 2px solid black;
}

.previewBtn:hover, .viewBtn:hover {
    background: crimson;
}

.codeOptions {
    display: flex;
    justify-content: space-between;
    padding: 5px;
}

.codeOptions button:hover {
    cursor: pointer;
}

#top {
    display: flex;
    justify-content: center;
    text-align: center;
    margin-top: 20vh;
    font-size: 1.7rem;
    cursor: pointer;
    background: black;
    color: white;
    font-weight: bold;
    
}

#top:hover {
    text-decoration: 5px solid crimson underline;
}

#footerSpacer {
    background: black;
}

#contact {
    background: black;
}

.contactHeader {
    color: white;
    font-size: 3rem;
    display: flex;
    justify-content: center;
}

.formWrapper {
    color: white;
    display: flex;
    justify-content: center;
    padding: 10px;
    transform: translateY(100px);
    gap: 50px;
}

form {
    display: flex;
    flex-direction: column;
    gap: 10px;
}

input:focus {
    border: 5px solid crimson;
}

textarea:focus {
    border: 5px solid crimson;
}

.nameField, .emailField {
    width: 250px;
    padding: 10px;
}

.messageBox {
    height: 200px;
    width: 250px;
    text-align: justify;
    padding: 10px;
}

.messageBox::placeholder {
    text-align: top;
}

.submitBtn {
    width: 100px;
    height: 50px;
    align-self: center;
    background: crimson;
    border: 2px solid black;
    border-radius: 5px;
    font-weight: 800;
}

.submitBtn:hover {
    background: white;
    border: 2px solid crimson;
}

.socials {
    transform: translateY(30px);
}

svg {
    font-size: 50px;
    color: white;
}

svg:hover {
    color: crimson;
}

.formWrapper {
    transform: translateY(20px);
    text-transform: uppercase;
}

.contactHeader {
    color: crimson;
    text-decoration: 5px solid white overline;
}

/* had to add this because image too large */
#image {
    width: 320px;
}


@media screen and (max-width: 500px){
   .aboutHeader {
    display: none;
   }
}

@media screen and (max-width: 720px)  and (orientation: landscape){
    .aboutHeader {
     display: none;
    }
 }


@media screen and (max-width: 850px) {
    .leftLinks, .rightLinks {
        display: flex;
        flex-direction: column;
        font-size: 1rem;
    }

    .links {
        justify-content: space-evenly;
    }

    .logo {
        display: flex;
        font-size: 1.5rem;
        align-items: center;
    }

    /* .navigation {
        position: fixed;
        bottom: 0;
        z-index: 2;
        background: crimson;
        width: 100%;
        border-top: 3px solid black;
        opacity: 90%;
    } */

    .navImg {
        height: 20px;
        border: 3px solid black;
        border-radius: 10px;
        padding: 5px;
    }

    .links a {
       
        color: black;
        
    }

    .links p {
        color: black;
    }

    .logo {
        display: none;
    }

    .para {
    font-size: 50px;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 20px;
    
    
    color: crimson; 
    }

    .about-blurb {
        font-size: 1.5rem;
        display: flex;
        align-items: center;
        flex-wrap: wrap;
        text-align: justify;
        text-justify: inter-word;
        width: 100vw;
        
    }


    .infoSection {
        height: 40vh;
        align-items: center;
        justify-content: center;
        margin-left: -190px;
        font-size: 0.65rem;
        margin-top: 100px;
    }

    .card {
        width: 240px;
    }

   

    .cards {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        gap: 30px;
        
    
    }

    #image {
        width: 350px;
    }
   
    .contactSection {
        display: flex;
        flex-direction: column;
    }

    .formWrapper {
        display: flex;
        flex-direction: column;
        align-items: center;
    }

    .formText {
        transform: translateY(20px);
    }

  
}

/* ==== INFO TYPEWRITER CSS ==== */



.var-highlight{
    color: blue;
  }
  .string-highlight{
    color: crimson;
  }
  
  #typewriter{
      font-size: 2em;
      margin: 0;
      font-family: "Courier New";
  
      &:after{
        content: "|";
        animation: blink 500ms linear infinite alternate;
      }
  }
  
  @-webkit-keyframes blink{
    0%{opacity: 0;}
    100%{opacity: 1;}
  }
  
  @-moz-keyframes blink{
    0%{opacity: 0;}
    100%{opacity: 1;}
  }
  
  @keyframes blink{
    0%{opacity: 0;}
    100%{opacity: 1;}
  }

